Added responsive feedback to websites

--- a/nft-preview/stylesheet.css
+++ b/nft-preview/stylesheet.css
@@ -18,13 +18,48 @@ header { color: hsl(0, 0%, 100%);
 }
 
 .container {
-  display: flex;
-  align-items: center;
-  justify-content: center
+  position: relative;
 }
 
 .image {
-  flex-basis: 7%;
+  display: block;
+}
+
+.overlay {
+  border-radius: 30px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: hsl(178, 100%, 50%);
+}
+
+.container:hover .overlay {
+  opacity: 0.75;
+}
+
+.text {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.head:hover { color:hsl(178, 100%, 50%);
+}
+
+.name {color:hsl(0, 0%, 100%);
+}
+
+.name:hover {color:hsl(178, 100%, 50%);
 }
 
 footer {font-size:70%;
